# jag-ide

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  TRD.md  jag.db  prd.md  settings.toml  ui.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
crates/jag-agents/: Cargo.toml
crates/jag-agents/src/: backend_agent.rs  communication.rs  frontend_agent.rs  git_agent.rs  integration_agent.rs  lib.rs  planner.rs  traits.rs
crates/jag-agents/src/browser/: agent.rs  ensemble_evaluator.rs  mod.rs  playwright_runner.js  reference_store.rs  tester.rs  vision.rs
crates/jag-agents/src/tests/: integration.rs
crates/jag-artifacts/: Cargo.toml
crates/jag-artifacts/src/: generator.rs  store.rs
crates/jag-benchmarks/: Cargo.toml
crates/jag-benchmarks/src/: lib.rs
crates/jag-core/: Cargo.toml
crates/jag-core/src/: config.rs  errors.rs  lib.rs  telemetry.rs  types.rs
crates/jag-db/: Cargo.toml
crates/jag-db/migrations/: 001_initial_schema.sql  002_enterprise_schema.sql  003_workflow_persistence.sql  004_model_benchmarks.sql  005_session_management.sql  006_workspace_sharing.sql
crates/jag-db/src/: sqlite.rs
crates/jag-editor/: Cargo.toml
crates/jag-editor/benches/: frame_time.rs
crates/jag-editor/examples/: streaming_demo.rs
crates/jag-editor/src/: fallback.rs  lib.rs  main.rs  protocol.rs  renderer.rs  server.rs  shader.wgsl  text.rs  vertex.rs
crates/jag-git/: Cargo.toml
crates/jag-git/src/: branch.rs  lib.rs  pr.rs  provider.rs  repository.rs  snapshot.rs
crates/jag-lsp/: Cargo.toml
crates/jag-lsp/src/: index.rs  lib.rs  server.rs
crates/jag-models/: Cargo.toml
crates/jag-models/src/: lib.rs  mock.rs  ollama_client.rs  router.rs
crates/jag-sandbox/: Cargo.toml  SECURITY.md
crates/jag-sandbox/src/: audit.rs  executor.rs  lib.rs  security.rs
crates/jag-server/: Cargo.toml
crates/jag-server/src/: dto.rs  main.rs
crates/jag-server/src/handlers/: admin.rs  agents.rs  artifacts.rs  auth.rs  benchmarks.rs  browser.rs  dashboard.rs  git.rs  mod.rs  models.rs  sync.rs  tasks.rs  workflow.rs  workspace.rs
crates/jag-server/src/middleware/: auth.rs
crates/jag-validation/: Cargo.toml
crates/jag-validation/src/: coverage.rs  lib.rs
crates/jag-workflow/: Cargo.toml
crates/jag-workflow/src/: dag.rs  engine.rs
crates/jag-workspace/: Cargo.toml
crates/jag-workspace/src/: manager.rs
docs/: api-reference.md  architecture.md  user-guide.md
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  webpack.config.js
frontend/e2e/: mission_control.spec.ts
frontend/playwright-report/: index.html
frontend/scripts/: notarize.js
frontend/src/: main.ts  preload.ts
frontend/src/renderer/: App.tsx  index.css  index.html  index.tsx  types.ts
frontend/src/renderer/components/: AgentCard.tsx  AnalyticsDashboard.tsx  ApprovalQueue.tsx  ArtifactPreview.tsx  AuditLogViewer.tsx  BrowserTestResults.tsx  ChatPanel.tsx  CoverageReport.tsx  ErrorBoundary.tsx  GpuCanvas.tsx  LoadingSpinner.tsx  MissionControl.tsx  ModelSelector.tsx  PrStatus.tsx  WorkflowTimeline.tsx
frontend/src/renderer/services/: api.ts
frontend/src/renderer/stores/: adminStore.ts  agentStore.ts  workspaceStore.ts
frontend/src/renderer/styles/: index.css
scratch/: bump_versions.ps1
scripts/: build-dist.ps1  build-release.ps1
