[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/jag-core",
    "crates/jag-agents",
    "crates/jag-workflow",
    "crates/jag-models",
    "crates/jag-sandbox",
    "crates/jag-artifacts",
    "crates/jag-workspace",
    "crates/jag-git",
    "crates/jag-lsp",
    "crates/jag-server",
    "crates/jag-db",
    "crates/jag-validation", "crates/jag-editor",
    "crates/jag-benchmarks",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4.4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
git2 = { version = "0.19", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
dashmap = "5.5"
async-channel = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"
async-trait = "0.1"
dotenvy = "0.15"
config = "0.14"
rand = "0.8"
oauth2 = "4.4"
openidconnect = "3.4"
jsonwebtoken = "9.2"
ring = "0.17"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
actix-web-httpauth = "0.8"
octocrab = "0.38"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
prometheus = "0.13"
actix-web-prometheus = "0.1"
