[package]
name = "jag-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
jag-core = { path = "../jag-core" }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
