[package]
name = "jag-benchmarks"
version = "1.0.0"
edition = "2024"

[dependencies]
jag-core = { path = "../jag-core" }
jag-models = { path = "../jag-models" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
