[package]
name = "jag-db"
version = "0.1.0"
edition = "2024"

[dependencies]
jag-core = { path = "../jag-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
