[package]
name = "jag-git"
version = "1.0.0"
edition = "2024"

[dependencies]
jag-core = { path = "../jag-core" }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
octocrab = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

