[package]
name = "jag-lsp"
version = "1.0.0"
edition = "2024"

[dependencies]
jag-core = { path = "../jag-core" }
jag-models = { path = "../jag-models" }
tower-lsp = "0.20"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }


