[package]
name = "jag-models"
version = "1.0.0"
edition = "2024"

[dependencies]
jag-core = { path = "../jag-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
prometheus = "0.13"
lazy_static = "1.4"
